packages/flutter_wasmi/macos/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct DartCObject *WireSyncReturn;
typedef union Value2Kind {
  struct wire_Value2_I32 *I32;
  struct wire_Value2_I64 *I64;
  struct wire_Value2_F32 *F32;
  struct wire_Value2_F64 *F64;
  struct wire_Value2_FuncRef *FuncRef;
  struct wire_Value2_ExternRef *ExternRef;
} Value2Kind;
typedef struct wire_Value2 {
  int32_t tag;
  union Value2Kind *kind;
} wire_Value2;
typedef struct wire_WasmiModuleId {
  uint32_t field0;
} wire_WasmiModuleId;
typedef struct wire_list_value_ty {
  int32_t *ptr;
  int32_t len;
} wire_list_value_ty;
typedef struct wire_WasmMemoryType {
  uint32_t initial_pages;
  uint32_t *maximum_pages;
} wire_WasmMemoryType;
typedef struct wire_TableType2 {
  uint32_t min;
  uint32_t *max;
} wire_TableType2;
typedef struct wire_Global {
  const void *ptr;
} wire_Global;
typedef struct wire_Memory {
  const void *ptr;
} wire_Memory;
typedef struct wire_Table {
  const void *ptr;
} wire_Table;
void wire_dispose__method__WasmiModuleId(int64_t port_, struct wire_WasmiModuleId *that);
WireSyncReturn wire_create_function__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                           uintptr_t function_pointer,
                                                           struct wire_list_value_ty *param_types);
WireSyncReturn wire_create_memory__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                         struct wire_WasmMemoryType *memory_type);
WireSyncReturn wire_create_global__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                         struct wire_Value2 *value,
                                                         int32_t mutability);
WireSyncReturn wire_create_table__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                        struct wire_Value2 *value,
                                                        struct wire_TableType2 *table_type);
WireSyncReturn wire_get_global_type__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                           struct wire_Global global);
WireSyncReturn wire_get_global_value__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                            struct wire_Global global);
WireSyncReturn wire_set_global_value__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                            struct wire_Global global,
                                                            struct wire_Value2 *value);
WireSyncReturn wire_get_memory_type__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                           struct wire_Memory memory);
WireSyncReturn wire_get_memory_data__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                           struct wire_Memory memory);
WireSyncReturn wire_read_memory__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                       struct wire_Memory memory,
                                                       uintptr_t offset,
                                                       struct wire_uint_8_list *buffer);
WireSyncReturn wire_get_memory_pages__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                            struct wire_Memory memory);
WireSyncReturn wire_write_memory__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                        struct wire_Memory memory,
                                                        uintptr_t offset,
                                                        struct wire_uint_8_list *buffer);
WireSyncReturn wire_grow_memory__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                       struct wire_Memory memory,
                                                       uint32_t pages);
WireSyncReturn wire_get_table_size__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                          struct wire_Table table);
WireSyncReturn wire_get_table_type__method__WasmiModuleId(struct wire_WasmiModuleId *that,
                                                          struct wire_Table table);