packages/wasmi/lib/src/bridge_generated.io.dart


  late final _wire_dispose__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmiModuleId>)>>(
      'wire_dispose__method__WasmiModuleId');
  late final _wire_dispose__method__WasmiModuleId =
      _wire_dispose__method__WasmiModuleIdPtr
          .asFunction<void Function(int, ffi.Pointer<wire_WasmiModuleId>)>();

  WireSyncReturn wire_create_function__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    int function_pointer,
    ffi.Pointer<wire_list_value_ty> param_types,
  ) {
    return _wire_create_function__method__WasmiModuleId(
      that,
      function_pointer,
      param_types,
    );
  }

  late final _wire_create_function__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  ffi.UintPtr, ffi.Pointer<wire_list_value_ty>)>>(
      'wire_create_function__method__WasmiModuleId');
  late final _wire_create_function__method__WasmiModuleId =
      _wire_create_function__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, int,
              ffi.Pointer<wire_list_value_ty>)>();

  WireSyncReturn wire_create_memory__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    ffi.Pointer<wire_WasmMemoryType> memory_type,
  ) {
    return _wire_create_memory__method__WasmiModuleId(
      that,
      memory_type,
    );
  }

  late final _wire_create_memory__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  ffi.Pointer<wire_WasmMemoryType>)>>(
      'wire_create_memory__method__WasmiModuleId');
  late final _wire_create_memory__method__WasmiModuleId =
      _wire_create_memory__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              ffi.Pointer<wire_WasmMemoryType>)>();

  WireSyncReturn wire_create_global__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    ffi.Pointer<wire_Value2> value,
    int mutability,
  ) {
    return _wire_create_global__method__WasmiModuleId(
      that,
      value,
      mutability,
    );
  }

  late final _wire_create_global__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>,
              ffi.Pointer<wire_Value2>,
              ffi.Int32)>>('wire_create_global__method__WasmiModuleId');
  late final _wire_create_global__method__WasmiModuleId =
      _wire_create_global__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              ffi.Pointer<wire_Value2>, int)>();

  WireSyncReturn wire_create_table__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    ffi.Pointer<wire_Value2> value,
    ffi.Pointer<wire_TableType2> table_type,
  ) {
    return _wire_create_table__method__WasmiModuleId(
      that,
      value,
      table_type,
    );
  }

  late final _wire_create_table__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  ffi.Pointer<wire_Value2>, ffi.Pointer<wire_TableType2>)>>(
      'wire_create_table__method__WasmiModuleId');
  late final _wire_create_table__method__WasmiModuleId =
      _wire_create_table__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              ffi.Pointer<wire_Value2>, ffi.Pointer<wire_TableType2>)>();

  WireSyncReturn wire_get_global_type__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Global global,
  ) {
    return _wire_get_global_type__method__WasmiModuleId(
      that,
      global,
    );
  }

  late final _wire_get_global_type__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Global)>>('wire_get_global_type__method__WasmiModuleId');
  late final _wire_get_global_type__method__WasmiModuleId =
      _wire_get_global_type__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Global)>();

  WireSyncReturn wire_get_global_value__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Global global,
  ) {
    return _wire_get_global_value__method__WasmiModuleId(
      that,
      global,
    );
  }

  late final _wire_get_global_value__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Global)>>('wire_get_global_value__method__WasmiModuleId');
  late final _wire_get_global_value__method__WasmiModuleId =
      _wire_get_global_value__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Global)>();

  WireSyncReturn wire_set_global_value__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Global global,
    ffi.Pointer<wire_Value2> value,
  ) {
    return _wire_set_global_value__method__WasmiModuleId(
      that,
      global,
      value,
    );
  }

  late final _wire_set_global_value__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  wire_Global, ffi.Pointer<wire_Value2>)>>(
      'wire_set_global_value__method__WasmiModuleId');
  late final _wire_set_global_value__method__WasmiModuleId =
      _wire_set_global_value__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Global,
              ffi.Pointer<wire_Value2>)>();

  WireSyncReturn wire_get_memory_type__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_type__method__WasmiModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_type__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Memory)>>('wire_get_memory_type__method__WasmiModuleId');
  late final _wire_get_memory_type__method__WasmiModuleId =
      _wire_get_memory_type__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Memory)>();

  WireSyncReturn wire_get_memory_data__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_data__method__WasmiModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_data__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Memory)>>('wire_get_memory_data__method__WasmiModuleId');
  late final _wire_get_memory_data__method__WasmiModuleId =
      _wire_get_memory_data__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Memory)>();

  WireSyncReturn wire_read_memory__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Memory memory,
    int offset,
    ffi.Pointer<wire_uint_8_list> buffer,
  ) {
    return _wire_read_memory__method__WasmiModuleId(
      that,
      memory,
      offset,
      buffer,
    );
  }

  late final _wire_read_memory__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  wire_Memory, ffi.UintPtr, ffi.Pointer<wire_uint_8_list>)>>(
      'wire_read_memory__method__WasmiModuleId');
  late final _wire_read_memory__method__WasmiModuleId =
      _wire_read_memory__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Memory,
              int, ffi.Pointer<wire_uint_8_list>)>();

  WireSyncReturn wire_get_memory_pages__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_pages__method__WasmiModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_pages__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Memory)>>('wire_get_memory_pages__method__WasmiModuleId');
  late final _wire_get_memory_pages__method__WasmiModuleId =
      _wire_get_memory_pages__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Memory)>();

  WireSyncReturn wire_write_memory__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Memory memory,
    int offset,
    ffi.Pointer<wire_uint_8_list> buffer,
  ) {
    return _wire_write_memory__method__WasmiModuleId(
      that,
      memory,
      offset,
      buffer,
    );
  }

  late final _wire_write_memory__method__WasmiModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
                  wire_Memory, ffi.UintPtr, ffi.Pointer<wire_uint_8_list>)>>(
      'wire_write_memory__method__WasmiModuleId');
  late final _wire_write_memory__method__WasmiModuleId =
      _wire_write_memory__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Memory,
              int, ffi.Pointer<wire_uint_8_list>)>();

  WireSyncReturn wire_grow_memory__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Memory memory,
    int pages,
  ) {
    return _wire_grow_memory__method__WasmiModuleId(
      that,
      memory,
      pages,
    );
  }

  late final _wire_grow_memory__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>, wire_Memory,
              ffi.Uint32)>>('wire_grow_memory__method__WasmiModuleId');
  late final _wire_grow_memory__method__WasmiModuleId =
      _wire_grow_memory__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Memory, int)>();

  WireSyncReturn wire_get_table_size__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Table table,
  ) {
    return _wire_get_table_size__method__WasmiModuleId(
      that,
      table,
    );
  }

  late final _wire_get_table_size__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Table)>>('wire_get_table_size__method__WasmiModuleId');
  late final _wire_get_table_size__method__WasmiModuleId =
      _wire_get_table_size__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Table)>();

  WireSyncReturn wire_get_table_type__method__WasmiModuleId(
    ffi.Pointer<wire_WasmiModuleId> that,
    wire_Table table,
  ) {
    return _wire_get_table_type__method__WasmiModuleId(
      that,
      table,
    );
  }

  late final _wire_get_table_type__method__WasmiModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmiModuleId>,
              wire_Table)>>('wire_get_table_type__method__WasmiModuleId');
  late final _wire_get_table_type__method__WasmiModuleId =
      _wire_get_table_type__method__WasmiModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmiModuleId>, wire_Table)>();
